# alphagen

./: gp.py  pyproject.toml
alphagen/models/: linear_alpha_pool.py
